# HL-gaps-pub

./: .cookiecutterrc  .coveragerc  .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  AUTHORS.rst  CONTRIBUTING.rst  Dockerfile  HISTORY.rst  MANIFEST.in  Makefile  README.rst  docker-compose.yml  docs.html  environment.yml  make.bat  pyproject.toml  results_407260.raw  setup.cfg  setup.py  tox.ini
.github/workflows/: main.yml
cwl_workflow/: cleanup.sh  gap.cwl  paramas.yml  scatter_inp.yml  scatter_wf.cwl  wf_run _advanced.sh  wf_run.sh  write_scatter_yaml.py
data/coconut/: extract.sh
data/coconut/db_split/: 407260_COCONUT_2022_01_2D.SDF  407261_COCONUT_2022_01_2D.SDF  407262_COCONUT_2022_01_2D.SDF  407263_COCONUT_2022_01_2D.SDF  407264_COCONUT_2022_01_2D.SDF  407265_COCONUT_2022_01_2D.SDF  407266_COCONUT_2022_01_2D.SDF  407267_COCONUT_2022_01_2D.SDF  407268_COCONUT_2022_01_2D.SDF  407269_COCONUT_2022_01_2D.SDF  40726_COCONUT_2022_01_2D.SDF
data/processed/: PI_test.joblib  PI_train.joblib  reg_NN_MLP.joblib  reg_NN_MLP.pkl  slurm-512835.out
data/test/: 0_test.SDF  0_test_no_conf.SDF
docs/: cli.rst  conf.py  index.rst  installation_dev.rst  license.rst  tutorial.rst  usage.rst
docs/notebooks/: calc_descriptors.ipynb  feature_permutation_show.ipynb  general_analysis_GBR.ipynb  general_analysis_MLPR.ipynb  heatmap_range.ipynb  save_images_of_molecules.ipynb
hl_gaps_pub/: __init__.py  cli.py  hl_gaps_pub.py
notebooks/: calc_descriptors.ipynb  descriptors_GBReg.ipynb  feature_permutation.ipynb  gap_functions.ipynb  general_analysis_GBR.ipynb  general_analysis_MLPR.ipynb  heatmap_iqr.ipynb  heatmap_range.ipynb  learning.ipynb  load_model.ipynb  load_model_GBR.ipynb  regression_gradientboost.ipynb  save_images_of_molecules.ipynb  write_scatter_yaml.ipynb
requirements/: common.txt  dev.txt  dev_backup.txt  prod.txt
scripts/: descriptors_NN_MLPReg.py  feature_permutation.py  hyperparameter_opt_GBReg.py  hyperparameter_opt_NN_MLPReg.py  serial_batch.py  write_scatter_yaml.py
tests/: __init__.py  test_hl_gaps_pub.py
