[build-system]
requires = [
    "setuptools",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "hl_gaps_pub"
version = "0.1.0"
description = "High throughput tight binding calculation of electronic HOMO-LUMO gaps and its prediction for natural compounds"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click",
    "environs",
    "python-dotenv",
    "pandas",
    "scikit-learn==1.4.1.post1",
    "seaborn",
]

[tool.black]
line-length = 120

[tool.flake8]
max-line-length = 120

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
scripts_are_modules = true
warn_unused_configs = true
allow_redefinition = true
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
no_implicit_optional = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true

[tool.pylint.master]
ignore-paths = ['docs', 'setup.py']
disable = ['R0801']

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-rs --cov=hl_gaps_pub --cov-report=term --durations=10 --import-mode=importlib"
filterwarnings = [
    "ignore:.*imp module.*:DeprecationWarning",
    "ignore:.*_yaml extension module.*:DeprecationWarning"
]

#eventually remove that
[tool.pytest_env]
XTBPATH = "/home/sat/miniforge3/envs/py310hl_gaps_pub/share/xtb"