[build-system]
requires = [
    "setuptools>=61.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "hl_gaps_pub"
version = "0.1.0"
description = "High throughput tight binding calculation of electronic HOMO-LUMO gaps and its prediction for natural compounds"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  {name = "Sascha Thinius", email = "sascha.thinius.87@gmail.com"},
]
license = {file = "LICENSE"}
keywords = ["quantum chemistry", "homo-lumo", "xtb", "orca", "rdkit"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click",
    "environs",
    "python-dotenv",
    "pandas",
    "scikit-learn==1.4.1.post1",  # Keep version pinning!
    "seaborn",
    "rdkit-pypi", # Use rdkit-pypi for pip
]

[project.scripts]
HLgap = "hl_gaps_pub.cli:get_hl_gap"

[tool.black]
line-length = 120

[tool.flake8]
max-line-length = 120

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
scripts_are_modules = true
warn_unused_configs = true
allow_redefinition = true
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
no_implicit_optional = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-rs --cov=hl_gaps_pub --cov-report=term --durations=10 --import-mode=importlib"
filterwarnings = [
    "ignore:.*imp module.*:DeprecationWarning",
    "ignore:.*_yaml extension module.*:DeprecationWarning"
]
norecursedirs = ["scripts"]
testpaths = ["tests", "hl_gaps_pub"]

# Remove this section. Conda handles XTBPATH
# [tool.pytest_env]
# XTBPATH = "/home/sat/miniforge3/envs/py310hl_gaps_pub/share/xtb"