[build-system]
requires = [
    "setuptools>=61.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "hl_gaps_pub"
version = "0.1.0"
description = "High throughput tight binding calculation of electronic HOMO-LUMO gaps and its prediction for natural compounds"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  {name = "Sascha Thinius", email = "sascha.thinius.87@gmail.com"},
]
license = {file = "LICENSE"}
keywords = ["quantum chemistry", "homo-lumo", "xtb", "orca", "rdkit"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click",
    "environs",
    "python-dotenv",
    "pandas",
    "scikit-learn==1.4.1.post1",  # Keep version pinning!
    "seaborn",
    "rdkit-pypi", # Use rdkit-pypi for pip
]

[project.scripts]
HLgap = "hl_gaps_pub.cli:get_hl_gap"

[tool.black]
line-length = 120

[tool.flake8]
max-line-length = 120

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
scripts_are_modules = true
warn_unused_configs = true
allow_redefinition = true
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
no_implicit_optional = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-rs --cov=hl_gaps_pub --cov-report=term --durations=10 --import-mode=importlib"
filterwarnings = [
    "ignore:.*imp module.*:DeprecationWarning",
    "ignore:.*_yaml extension module.*:DeprecationWarning"
]
norecursedirs = ["scripts"]
testpaths = ["tests", "hl_gaps_pub"]

# Remove this section. Conda handles XTBPATH
# [tool.pytest_env]
# XTBPATH = "/home/sat/miniforge3/envs/py310hl_gaps_pub/share/xtb"

[tool.bumpversion]
current_version = "0.1.0" # Make sure this matches your ACTUAL current version
commit = true             # Automatically commit changes
tag = true                # Automatically create a git tag
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)" # Standard semver parsing
serialize = ["{major}.{minor}.{patch}"] # Standard semver formatting

# Define the files to update
[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"' # How to find the version in this file
replace = 'version = "{new_version}"'    # How to write the new version

[[tool.bumpversion.files]]
filename = "hl_gaps_pub/__init__.py" # Assuming you have __version__ here
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[[tool.bumpversion.files]] # Add this block if you still have version in setup.py
filename = "setup.py"
search = 'version="{current_version}"'
replace = 'version="{new_version}"'


[[tool.bumpversion.files]]
filename = "setup.cfg"
search = 'current_version = {current_version}' # Matches current_version = 0.1.0
replace = 'current_version = {new_version}'
# **NOTE:** If 'current_version' in setup.cfg is ACTUALLY part of an *old*
# bumpversion configuration *within setup.cfg*, you might not need this entry
# if pyproject.toml is now your main config file. Bumpversion usually updates
# its own config setting automatically. Double-check the context of this line.

[[tool.bumpversion.files]]
# For README.rst
filename = "README.rst"
# Matches the specific Markdown formatting: * **`version`:** v0.1.0
search = '* **`version`:** v{current_version}'
replace = '* **`version`:** v{new_version}'

[[tool.bumpversion.files]]
# For HISTORY.rst
filename = "HISTORY.rst"
# Matches the 'v' prefix, version, space, and opening parenthesis
search = 'v{current_version} \('
replace = 'v{new_version} ('
# **CAUTION:** Automatically bumping HISTORY.rst is often discouraged.
# It's usually better to update this file manually when writing release notes
# to ensure the date and changelog entries are correct. Consider removing
# this block if you prefer manual updates for HISTORY.rst.