[bumpversion]
current_version = 0.1.0
commit = True
tag = True

[bumpversion:file:setup.py]
search = VERSION = "{current_version}"
replace = VERSION = "{new_version}"

[bumpversion:file:hl_gaps_pub/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[bumpversion:file:.env]
search = CONTAINER_REGISTRY_TAG=v{current_version}
replace = CONTAINER_REGISTRY_TAG=v{new_version}

[flake8]
exclude = docs
ignore = D401,D202,E226,E302,E41
max-line-length = 120
max-complexity = 10
per-file-ignores =
     tests/*: D103

[aliases]
test = pytest
[options.entry_points]
console_scripts = 
	MyScript = hl_gaps_pub.cli:main
